NINE-358 added deposit btn

--- a/locales/en.json
+++ b/locales/en.json
@@ -2,6 +2,7 @@
   "title": "Ninecasino",
   "buttons": {
     "register": "Register now",
-    "login": "Login"
+    "login": "Login",
+    "deposit": "Deposit"
   }
 }
