NINE-358 added translations

--- a/locales/en.json
+++ b/locales/en.json
@@ -4,5 +4,8 @@
     "register": "Register now",
     "login": "Login",
     "deposit": "Deposit"
+  },
+  "homepage": {
+    "bannerTitle": "Welcome package"
   }
 }
