--- a/locales/en.json
+++ b/locales/en.json
@@ -32,7 +32,11 @@
     "forgotPassword": "Forgot password",
     "emails": "Receive email promos",
     "terms": "I am {minAge} years old and I accept the{br} {terms} and {policy}",
-    "step2Title": "Please, fill the information below!"
+    "step2Title": "Please, fill the information below!",
+    "thanksRegistration": "Thank you for registration",
+    "registrationBonus": "100% up to $150",
+    "registrationBonusText": "For your first deposit! Use advantage of Ninecasino Welcome Bonus",
+    "getBonus": "Get your bonus"
   },
   "pages": {
     "lobby": "Lobby",
