--- a/locales/en.json
+++ b/locales/en.json
@@ -20,7 +20,10 @@
     "filter": "Filter",
     "cashout": "Cashout",
     "cancel": "Cancel",
-    "loading": "Loading"
+    "loading": "Loading",
+    "continue": "Continue",
+    "letsStart": "Let’s start",
+    "goHomePage": "Go to the home page"
   },
   "menu": {
     "menu": "Menu",
@@ -35,7 +38,7 @@
     "pleaseDepositText": "It's a pity, but your balance is 0. Deposit now!"
 
   },
-  "authDialog": {
+  "auth": {
     "loginTitle": "Welcome back",
     "signUpTitle": "Sign up <span class=\"Colored\">&</span> get<br />welcome bonus",
     "forgotPassword": "Forgot password",
@@ -45,7 +48,16 @@
     "thanksRegistration": "Thank you for registration",
     "registrationBonus": "100% up to $150",
     "registrationBonusText": "For your first deposit! Use advantage of Ninecasino Welcome Bonus",
-    "getBonus": "Get your bonus"
+    "getBonus": "Get your bonus",
+    "enterEmail": "Enter email",
+    "passwordRestoreText": "Thanks! Check your email for further instructions",
+    "enterNewPassword": "Enter your new password",
+    "updatePassword": "Update password",
+    "newPassword": "New password",
+    "confirmPassword": "Password confirm",
+    "tryingConfirmEmail": "We're trying to verify your email",
+    "confirmEmailError": "Sorry, you email was not confirmed",
+    "confirmEmailSuccess": "Congratulations! Your email was successfully confirmed"
   },
   "pages": {
     "lobby": "Lobby",
@@ -95,7 +107,8 @@
     "type": "Type",
     "active": "Active",
     "left": "Left",
-    "yes": "Yes"
+    "yes": "Yes",
+    "email": "Email"
   },
   "actions": {
     "addCurrency": "Add currency"
