--- a/locales/en.json
+++ b/locales/en.json
@@ -256,34 +256,34 @@
       "createLimits": "Create limits",
       "addLimits": "Add limits",
       "limits": {
-        "deposit": {
+        "depositLimit": {
           "name": "Deposit limits",
           "text": "Your account can be set with deposit limits. This setting limits  the amount you can deposit per day, week or month.",
           "editRules": "You can reduce your limit at any time, this change will take effect immediately. You can increase the limit, however, in order for this change to take effect, you need 24 hours.",
           "deleteRules": "Cancellation of the loss limit takes 24 hours. After the limit is exceeded, you will receive an email notification."
         },
-        "wager": {
+        "wagerLimit": {
           "name": "Wager limits",
           "text": "Your account can be set with wager limits. This setting controls the amount of money you can wager per day, week or month.",
           "editRules": "You can reduce your limit at any time, this change will take effect immediately. You can increase the limit, however, in order for this change to take effect, you need 24 hours.",
           "deleteRules": "Cancellation of the wager limit takes 24 hours. After the limit is exceeded, you will receive an email notification."
         },
-        "loss": {
+        "lossLimit": {
           "name": "Loss limits",
           "text": "Your account can be set with loss limits. This setting limits the amount you can lose per day, week or month.",
           "editRules": "You can reduce your limit at any time, this change will take effect immediately. You can increase the limit, however, in order for this change to take effect, you need 24 hours.",
           "deleteRules": "Cancellation of the loss limit takes 24 hours. After the limit is exceeded, you will receive an email notification."
         },
-        "session": {
+        "sessionLimit": {
           "name": "Session limits",
-          "title": "time spent gambling'",
+          "title": "time spent gambling",
           "text": "time spent gambling",
           "editRules": "",
           "deleteRules": ""
         },
-        "coolOff": {
+        "coolingOffLimit": {
           "name": "Cooling off",
-          "title": "time spent gambling'",
+          "title": "time spent gambling",
           "text": "Feel the need to stay away from the casino for some time? You can set a cooling-off limit for a certain period of time. The restriction takes effect instantly. You won’t be able to make deposits and play during the specified period, also you will be excluded from all advertising offers. After the set period expires, you’ll receive a notification email saying your account is active again.",
           "editRules": "Limit decrease will be applied in 24 hours after player's request. Limit increase will be applied immediately.",
           "deleteRules": "Limit cancellation will be applied in 24 hours after player's request."
