NINE-384 i18n corrected limits

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -315,7 +315,8 @@
         "days" : "Dny",
         "weeks" : "Týdny",
         "months" : "Měsíce",
-        "min" : "Min"
+        "min" : "Min",
+        "day": "Den"
       },
       "edit" : "Upravit limit",
       "delete" : "Smazat limit",
