NINE-384 corrected cs.json

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -45,7 +45,7 @@
     "minAge" : "Jste mladší než"
   },
   "menu" : {
-    "menu" : "Jídelní lístek\nJídelní lístek\nJídelní lístek",
+    "menu" : "Jídelní lístek",
     "support" : "Podpěra",
     "yourAccount" : "Váš účet"
   },
