NINE-384 added login placeholders

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -77,6 +77,8 @@
     "confirmEmailError" : "Litujeme, váš e-mail nebyl potvrzen",
     "confirmEmailSuccess" : "Congratulations! Your email was successfully confirmed",
     "placeholders": {
+      "enterEmail": "E-emailen",
+      "enterPassword": "Heslo",
       "email": "E-emailen",
       "password": "Heslo",
       "country": "Země",
