NINE-384 corrected locales

--- a/locales/en.json
+++ b/locales/en.json
@@ -80,6 +80,7 @@
     "tryingConfirmEmail": "We're trying to verify your email",
     "confirmEmailError": "Sorry, you email was not confirmed",
     "confirmEmailSuccess": "Congratulations! Your email was successfully confirmed",
+    "bonus": "€ 150",
     "placeholders": {
       "enterEmail": "Enter your email",
       "enterPassword": "Enter your password",
@@ -186,7 +187,9 @@
         "ghost": "of game providers"
       }
     },
-    "allProviders": "All providers"
+    "allProviders": "All providers",
+    "tableIsOpen": "Table is open",
+    "tableIsClosed": "Table is closed"
   },
   "filters": {
     "filteredBy": "Filtered by",
