NINE-384 corrected auth bonus

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -65,7 +65,7 @@
     "terms" : "Je mi {minAge} let a přijímám {br} {terms} a {policy}",
     "step2Title" : "Vyplňte prosím níže uvedené informace!",
     "thanksRegistration" : "Děkujeme za registraci",
-    "registrationBonus" : "100% až Kč 3330",
+    "registrationBonus" : "Kč 3330",
     "registrationBonusText" : "Pro váš první vklad! Využijte uvítací bonus Ninecasino",
     "enterEmail" : "Zadejte email",
     "passwordRestoreText" : "Dík! Další pokyny najdete ve svém e-mailu",
